--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react-scroll": "^1.8.5",
     "axios": "^1.6.7",
     "framer-motion": "^6.5.1",
-    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -26,8 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "json-server": "json-server --watch db.json --port 5000"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
